--- a/talentstream/composer.json
+++ b/talentstream/composer.json
@@ -11,6 +11,7 @@
         "laravel/reverb": "^1.0",
         "laravel/tinker": "^2.10.1",
         "laravel/ui": "^4.6",
+        "livewire/livewire": "^3.6",
         "pusher/pusher-php-server": "^7.2"
     },
     "require-dev": {
